# ProofreaderBot

./: .env.example  .gitignore  2  AGENTS.md  ANOTHER_LOG_FILE_TO_CHECK_FOR_FAILED_CONVERSIONS.txt  CHANGES.md  README.md  REMEMBER_TO_REPROCESS_THESE_FAILED_CONVERSIONS.TXT  converters.py  document_stats.csv  gemini_llm.py  language_check.py  language_check_config.py  main.py  mkdocs.yml  postprocess_documents.py  pr-  pyproject.toml  unprocessedFiles.txt  wjec_scraper.py
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: copilot-instructions.md
Documents/: language-check-report-deduped.csv  language-check-report.csv  language-check-report.md  llm-proofreader-reports.csv  llm_categorised-language-check-report.csv  llm_proofreader.csv  unprocessedSubjects.txt  verfied-language-check-reports.csv  verified-llm-categorised-language-check-report.csv
data/: batch_jobs.json  llm_categoriser_state.json  llm_proofreader_state.json  verifier_batch_jobs.json  verifier_state.json
docs/: ARCHITECTURE.md  BATCH_API_USAGE.md  BATCH_CANCEL_FEATURE.md  BATCH_ORCHESTRATOR_USAGE.md  DEV_WORKFLOWS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_CHECK.md  LLM_PROOFREADER_DATA_LOADER_IMPLEMENTATION_GUIDE.md  LLM_PROVIDER_SPEC.md  PAGE_BASED_LOADER_README.md  UV_GUIDE.md  data.md  index.md  issue_categories.md  manage_language_ignore.md  methodology.md
notebooks/: data_overview.ipynb  factual_issues.ipynb  llm_proofreader_report_summary.ipynb  notebook_template.ipynb  notebook_template_full.ipynb  processed_summary.csv  stats_scratchpad.ipynb
scripts/: __init__.py  (+12 more)
(+753 files in other folders)
