[project]
name = "wjecdocumentscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "language-tool-python>=2.9.5",
    "markitdown>=0.1.3",
    "pyspellchecker>=0.8.3",
    "requests>=2.32.5",
]
